--- a/style.css
+++ b/style.css
@@ -1,28 +1,80 @@
+:root{
+    --bg-clr: #000000;
+    --input-blur: 3rem;
+    --text-clr: #ffffff;
+}
+
+
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
 
 *{
     margin: 0;
     padding: 0;
     border: none;
     outline: none;
-}
+    color: var(--text-clr);
+    font-family: "Varela Round", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+
 
 #setup{
     position: absolute;
     width: 40%;
     max-height: 80%;
-    background-color: #000000;
     top: 50%;
     left: 50%;
     translate: -50% -50%;
     overflow: scroll;
 }
 
+.opposite{
+    display: flex;
+    justify-content: space-between;
+}
+
+.title{
+    font-size: 2rem;
+    text-align: center;
+}
 
 input{
     display: block;
     width: 100%;
     padding: .3rem 0;
     text-align: center;
+    background: #7777773d;
+    animation: input-in .3s ease;
+    margin: .5rem 0;
+    height: 1.5rem;
+    border-radius: .4rem;
+}
+@keyframes input-in {
+    0%  {opacity: 0;filter: blur(var(--input-blur));padding: 0;margin: 0;translate: 0 3rem;height: 0;scale: 0.5;}
+    100%{opacity: 1;filter: blur(0px);padding: .3rem 0;margin: .5rem 0;translate: 0 0;height: 1.5rem;scale: 1;}
+}
+@keyframes input-out {
+    0%  {opacity: 1;filter: blur(0px);padding: .3rem 0;margin: .5rem 0;translate: 0 0;height: 1.5rem;}
+    70%{opacity: 0;filter: blur(var(--input-blur));padding: 0;margin: 0;translate: 0 2rem;height: 0;}
+    100%{opacity: 0;filter: blur(var(--input-blur));padding: 0;margin: 0;translate: 0 2rem;height: 0;}
+}
+
+
+
+.popup{
+    padding: 1.5rem;
+    background-color: var(--bg-clr);
+    border-radius: 1rem;
+    transition: .3s;
+}
+.popup[show='false']{
+    opacity: 0;
+    filter: blur(2rem);
+    pointer-events: none;
+    scale: .95;
 }
 
 
@@ -42,13 +94,116 @@ input{
     position: absolute;
     width: 40%;
     max-height: 80%;
-    background-color: #3c3c3c;
     top: 50%;
     left: 50%;
     translate: -50% -50%;
     overflow: scroll;
 }
+.results-line{
+    width: 100%;
+    height: 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    border-radius: 1rem;
+}
+.results-line:nth-child(odd){
+    background-color: #7878786f;
+}
 
-.results-line div{
+.results-place{
     display: inline-block;
+    width: 2rem;
+    text-align: center;
+}
+.results-names{
+    display: inline-block;
+    width: calc(100% - 2rem);
+}
+.results-name1,.results-name2{
+    display: inline-block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    translate: -50% -50%;
+    transition: .3s;
+}
+
+#results-container[invert='false'] .results-name2, #results-container[invert='true'] .results-name1{
+    opacity: 0;
+    transform: rotateX(180deg);
+    filter: blur(.2rem);
+}
+
+.button{
+    background-color: #358045;
+    padding: .3rem .5rem;
+    display: inline-block;
+    border-radius: .4rem;
+    margin: .2rem 0;
+}
+
+#dark-mode-button{
+    position: fixed;
+    top: 1.5rem;
+    right: 1.5rem;
+    width: 1.5rem;
+    border-radius: 50%;
+    aspect-ratio: 1/1;
+    translate: 50% -50%;
+    background-color: aqua;
+}
+#dark-mode-button * {
+    width: 1.5rem;
+    aspect-ratio: 1/1;
+    appearance: none;
+    margin: 0;
+    position: absolute;
+}
+#light-mode-overlay{
+    position: fixed;
+    display: inline-block;
+    top: 1.5rem;
+    right: 1.5rem;
+    width: 1.5rem;
+    /* height: 1.5rem; */
+    pointer-events: none;
+    transition: .7s cubic-bezier(.45,.05,.55,.95);
+    border-radius: 50%;
+    backdrop-filter: hue-rotate(180deg) invert();
+    aspect-ratio: 1/1;
+    translate: 50% -50%;
+}
+body[light-mode='true'] #light-mode-overlay{
+    width: 300%;
+    aspect-ratio: 1/1;
+    /* translate: 50% -50%; */
+    /* height: 100%;
+    border-radius: 0; */
+}
+
+#wallpaper{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #031e14;
+}
+
+
+#race{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #031e14;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    pointer-events: none;
+}
+#race[show='false']{
+    opacity: 0;
+    pointer-events: none;
+    filter: blur(2rem);
+    scale: .95;
 }
