--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
 }
 
 
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 
 *{
     margin: 0;
@@ -14,10 +13,12 @@
     border: none;
     outline: none;
     color: var(--text-clr);
-    font-family: "Varela Round", sans-serif;
-    font-weight: 400;
+    font-family: "Lexend", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    letter-spacing: 0.15px;
     font-style: normal;
-  }
+}
   
 
 
@@ -39,6 +40,8 @@
 .title{
     font-size: 2rem;
     text-align: center;
+    font-weight: 700;
+    letter-spacing: 0;
 }
 
 input{
@@ -46,11 +49,14 @@ input{
     width: 100%;
     padding: .3rem 0;
     text-align: center;
-    background: #7777773d;
     animation: input-in .3s ease;
     margin: .5rem 0;
     height: 1.5rem;
-    border-radius: .4rem;
+    background-color: transparent;
+    border-bottom: 1px solid #ffffff;
+}
+input:first-child{
+    border-top: 1px solid #ffffff;
 }
 @keyframes input-in {
     0%  {opacity: 0;filter: blur(var(--input-blur));padding: 0;margin: 0;translate: 0 3rem;height: 0;scale: 0.5;}
@@ -69,25 +75,16 @@ input{
     background-color: var(--bg-clr);
     border-radius: 1rem;
     transition: .3s;
+    border: 1px solid #ffffff;
+    box-shadow: 0 0 1.5rem -1rem #ffffff;
 }
 .popup[show='false']{
     opacity: 0;
     filter: blur(2rem);
     pointer-events: none;
-    scale: .95;
+    scale: .85;
 }
 
-
-.player-bar{
-    position: relative;
-    width: 100%;
-    height: 50px;
-}
-
-.player{
-    position: absolute;
-    padding: .5rem;
-}
 
 
 #results{
@@ -99,6 +96,9 @@ input{
     translate: -50% -50%;
     overflow: scroll;
 }
+#results-container{
+    margin: 1rem 0;
+}
 .results-line{
     width: 100%;
     height: 2rem;
@@ -106,10 +106,10 @@ input{
     justify-content: space-between;
     align-items: center;
     position: relative;
-    border-radius: 1rem;
+    border-bottom: 1px solid #ffffff;
 }
-.results-line:nth-child(odd){
-    background-color: #7878786f;
+.results-line:first-child{
+    border-top: 1px solid #ffffff;
 }
 
 .results-place{
@@ -137,11 +137,21 @@ input{
 }
 
 .button{
-    background-color: #358045;
+    background-color: #ffffff;
     padding: .3rem .5rem;
     display: inline-block;
     border-radius: .4rem;
-    margin: .2rem 0;
+    margin: .2rem .2rem;
+    color: #000000;
+    font-weight: 500;
+    font-size: 1rem;
+    transition: .1s;
+}
+.button:hover{
+    cursor: pointer;
+}
+.button:active{
+    scale: 0.95;
 }
 
 #dark-mode-button{
@@ -152,7 +162,8 @@ input{
     border-radius: 50%;
     aspect-ratio: 1/1;
     translate: 50% -50%;
-    background-color: aqua;
+    background-color: #000000;
+    overflow: hidden;
 }
 #dark-mode-button * {
     width: 1.5rem;
@@ -160,6 +171,16 @@ input{
     appearance: none;
     margin: 0;
     position: absolute;
+    opacity: 0;
+    filter: blur(.4rem);
+    transition: .3s;
+    rotate: 30deg;
+}
+body[light-mode='true'] #dark-mode-button>*:nth-child(1), body[light-mode='false'] #dark-mode-button>*:nth-child(2){
+    opacity: 1;
+    filter: blur(0);
+    rotate: 0deg;
+    scale: 0.8;
 }
 #light-mode-overlay{
     position: fixed;
@@ -187,23 +208,49 @@ body[light-mode='true'] #light-mode-overlay{
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #031e14;
+    background: radial-gradient(circle at 0% 0%, #023437, transparent), radial-gradient(circle at 50% 50%, #360751, transparent), radial-gradient(circle at 100% 100%, #262500, transparent), radial-gradient(circle at 0% 100%, #400, transparent), radial-gradient(circle at 100% 0%, #045301, transparent);
 }
 
 
 #race{
     position: absolute;
+    width: 90%;
+    height: 90%;
+    transition: .4s;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    background-color: #00000088;
+}
+.player-bar{
+    border-bottom: 1px solid #ffffff;
+    padding: .5rem 0;
+    position: relative;
     width: 100%;
-    height: 100%;
-    background-color: #031e14;
-    display: flex;
+    height: 50px;
+}
+.player-bar:first-child{
+    border-top: none;
+}
+
+
+.player{
+    position: absolute;
+    padding: .5rem;
+    transition: all linear 0.1s;
+    translate: -50% 0;
+}
+
+.x{
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    aspect-ratio: 1/1;
+    width: 1.5rem;
+    height: 1.5rem;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
-    pointer-events: none;
-}
-#race[show='false']{
-    opacity: 0;
-    pointer-events: none;
-    filter: blur(2rem);
-    scale: .95;
+    padding: 0;
+    margin: 0;
 }
