--- a/style.css
+++ b/style.css
@@ -50,22 +50,35 @@ input{
     padding: .3rem 0;
     text-align: center;
     animation: input-in .3s ease;
-    margin: .5rem 0;
     height: 1.5rem;
     background-color: transparent;
     border-bottom: 1px solid #ffffff;
+    transition: .3s;
 }
 input:first-child{
     border-top: 1px solid #ffffff;
 }
-@keyframes input-in {
-    0%  {opacity: 0;filter: blur(var(--input-blur));padding: 0;margin: 0;translate: 0 3rem;height: 0;scale: 0.5;}
-    100%{opacity: 1;filter: blur(0px);padding: .3rem 0;margin: .5rem 0;translate: 0 0;height: 1.5rem;scale: 1;}
+input[empty='true']{
+    padding: 0;
+    margin: 0;
+    height: 0;
+    border-bottom: 0 solid transparent;
 }
-@keyframes input-out {
-    0%  {opacity: 1;filter: blur(0px);padding: .3rem 0;margin: .5rem 0;translate: 0 0;height: 1.5rem;}
-    70%{opacity: 0;filter: blur(var(--input-blur));padding: 0;margin: 0;translate: 0 2rem;height: 0;}
-    100%{opacity: 0;filter: blur(var(--input-blur));padding: 0;margin: 0;translate: 0 2rem;height: 0;}
+@keyframes input-in {
+    0%{
+        transform: translateY(1rem);
+        opacity: 0;
+        height: 0;
+        padding: 0;
+        border-bottom: 0 solid transparent;
+    }
+    100%{
+        transform: translateY(0);
+        opacity: 1;
+        height: 1.5rem;
+        padding: .3rem 0;
+        border-bottom: 1px solid #ffffff;
+    }
 }
 
 
