--- a/style.css
+++ b/style.css
@@ -234,6 +234,7 @@ body[light-mode='true'] #light-mode-overlay{
     left: 50%;
     translate: -50% -50%;
     background-color: #00000088;
+    overflow: scroll;
 }
 .player-bar{
     border-bottom: 1px solid #ffffff;
